--- a/Scripts/usrfields.ini
+++ b/Scripts/usrfields.ini
@@ -1,5 +1,5 @@
-﻿[#0]
-name=Tit&le
+[#0]
+name=Chapter (Track Tit&le)
 value=TITLE
 size=1
 enabled=1
@@ -7,11 +7,12 @@ default=\u000b1
 multiline=0
 
 [#1]
-value=CONTENTGROUP
 name=Content Group
-multiline=0
+value=CONTENTGROUP
 size=1
+enabled=1
 default=\u000b1
+multiline=0
 
 [#2]
 name=ALBUM
@@ -30,65 +31,94 @@ default=\u000b1
 multiline=0
 
 [#4]
-value=ALBUMSORT
 name=Album Sort
-multiline=0
+value=ALBUMSORT
 size=1
+enabled=1
 default=\u000b1
+multiline=0
 
 [#5]
-value=SERIES
 name=#Series
-multiline=0
-size=2
-default=\u000b1
-
-[#6]
-value=SERIES-PART
-name=#Series-Part
-multiline=0
-size=4
-default=\u000b1
-
-[#7]
-name=ALBUM ARTIST
-value=ALBUMARTIST
+value=SERIES
 size=2
 enabled=1
 default=\u000b1
 multiline=0
 
+[#6]
+name=#Series-Part
+value=SERIES-PART
+size=4
+enabled=1
+default=\u000b1
+multiline=0
+
+[#7]
+name=Collection?
+value=SHOWMOVEMENT
+size=4
+enabled=1
+default=\u000b1
+multiline=0
+
 [#8]
-name=Composer
-value=COMPOSER
+name=Movement Name
+value=MOVEMENTNAME
 size=2
 enabled=1
 default=\u000b1
 multiline=0
 
 [#9]
-name=Art&ist
+name=Movement Number
+value=MOVEMENT
+size=4
+enabled=1
+default=\u000b1
+multiline=0
+
+[#10]
+name=Author (Album Artist)
+value=ALBUMARTIST
+size=2
+enabled=1
+default=\u000b1
+multiline=0
+
+[#11]
+name=Narrator (Composer)
+value=COMPOSER
+size=2
+enabled=1
+default=\u000b1
+multiline=0
+
+[#12]
+name=Art&ists on Track
 value=ARTIST
 size=1
 enabled=1
 default=\u000b1
 multiline=0
 
-[#10]
-value=TMP_GENRE1
+[#13]
 name=#Genre 1
-multiline=0
+value=TMP_GENRE1
 size=4
+enabled=1
 default=\u000b1
+multiline=0
 
-[#11]
-value=TMP_GENRE2
+[#14]
 name=#Genre 2
-multiline=0
+value=TMP_GENRE2
 size=4
+enabled=1
 default=\u000b1
+multiline=0
 
-[#12]
+[#15]
 name=GENRE
 value=GENRE
 size=2
@@ -96,7 +126,7 @@ enabled=1
 default=\u000b1
 multiline=0
 
-[#13]
+[#16]
 name=YEAR
 value=YEAR
 size=4
@@ -104,21 +134,23 @@ enabled=1
 default=\u000b1
 multiline=0
 
-[#14]
-value=RELEASETIME
+[#17]
 name=Pub. Year
-multiline=0
+value=RELEASETIME
 size=4
+enabled=1
 default=\u000b1
+multiline=0
 
-[#15]
-value=RATING WMP
+[#18]
 name=Rating WMP
-multiline=0
+value=RATING WMP
 size=4
+enabled=1
 default=\u000b1
+multiline=0
 
-[#16]
+[#19]
 name=TRACK
 value=TRACK
 size=4
@@ -126,7 +158,7 @@ enabled=1
 default=\u000b1
 multiline=0
 
-[#17]
+[#20]
 name=Co&mment
 value=COMMENT
 size=2
@@ -134,35 +166,39 @@ enabled=1
 default=\u000b1
 multiline=0
 
-[#18]
-value=DESCRIPTION
-name=Description
-multiline=0
-size=2
-default=\u000b1
-
-[#19]
-value=COPYRIGHT
-name=Copyright
-multiline=0
-size=2
-default=\u000b1
-
-[#20]
-value=PUBLISHER
-name=Publisher
-multiline=0
-size=2
-default=\u000b1
-
 [#21]
-value=WWWAUDIOFILE
-name=Audible Link
-multiline=0
+name=Description
+value=DESCRIPTION
 size=2
+enabled=1
 default=\u000b1
+multiline=0
 
 [#22]
+name=Copyright
+value=COPYRIGHT
+size=2
+enabled=1
+default=\u000b1
+multiline=0
+
+[#23]
+name=Publisher
+value=PUBLISHER
+size=2
+enabled=1
+default=\u000b1
+multiline=0
+
+[#24]
+name=Audible Link
+value=WWWAUDIOFILE
+size=2
+enabled=1
+default=\u000b1
+multiline=0
+
+[#25]
 name=#ASIN
 value=ASIN
 size=3
@@ -170,19 +206,19 @@ enabled=1
 default=\u000b1
 multiline=0
 
-[#23]
-value=MOOD
-name=Mood
+[#26]
+name=Disc (DELETE)
+value=DISCNUMBER
+size=3
+enabled=1
+default=\u000b2
 multiline=0
-size=2
-default=\u000b1
-enabled=0
 
-[#24]
-value=DESC
-name=desc
+[#27]
+name=M4B Mediatype
+value=ITUNESMEDIATYPE
+size=3
+enabled=1
+default=Audiobook
 multiline=0
-size=1
-default=\u000b1
-enabled=0
 
