--- a/Scripts/genres.ini
+++ b/Scripts/genres.ini
@@ -1,28 +1,37 @@
-﻿Action=
-Adult=
-Adventure=
-Biography=
+Action=
+Arts & Entertainment=
+Bios & Memoirs=
+Business=
 Classics=
 Comedy=
 Crime=
-Drama=
+Drama & Poetry=
 Environment=
-Fantasy=
+Erotica & Sexuality=
 Fiction=
 Food=
+Health & Fitness=
 History=
 Horror=
+Kids=
+Language Instruction=
+Live Events=
 Math=
-Mystery=
+Mysteries & Thrillers=
 Nature=
-Non-Fiction=
+Newspapers & Magazines=
+Nonfiction=
+Nostalgia Radio=
 Parenting=
 Philosophy=
 Politics=
-Religion=
+Radio & TV=
+Religion & Spirituality=
 Romance=
-Science=
-Science Fiction=
+Science & Technology=
+Sci-Fi & Fantasy=
+Self Development=
 Self-Help=
-Tech=
-Thriller=
+Sports=
+Teens=
+Travel & Adventure=
